fix image comparator preview scroll x on mobile

--- a/components/styles/styles.module.css
+++ b/components/styles/styles.module.css
@@ -201,6 +201,7 @@
   display: flex;
   overflow: auto;
   gap: 0.5rem;
+  scroll-behavior: smooth;
 }
 
 .proceduresPreviewImages {
@@ -249,6 +250,13 @@
 @keyframes scrollAnimRight {
   0%  {opacity: 1;}
   100% {opacity: 0.2;}
+}
+
+.scrollIntoViewIndicatorItem {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 100%;
+  border: 1px solid gray;
 }
 
 @media only screen and (max-width: 600px) {
